修改关于页面

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -940,7 +940,7 @@ about:
   banner_mask_alpha: 0.3
   avatar: https://static.kevinchu.top/blog/assets/img/avatar_03.jpg
   name: "Kevin Chu"
-  intro: "Write the Code. Change the world.🛸"
+  intro: "Write the Code. Change the world.🌏"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
