--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -925,8 +925,8 @@ tag:
     min_font: 15
     max_font: 30
     unit: px
-    start_color: "#BBBBEE"
-    end_color: "#337ab7"
+    start_color: "#11B08E"
+    end_color: "#1A4DF5"
 
 
 #---------------------------
@@ -945,14 +945,12 @@ about:
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/KevinChu1998", tip: "GitHub" }
-    - { class: "iconfont icon-wechat-fill", qrcode: "https://static.kevinchu.top/blog/assets/img/wechat_qrcode.jpg" }
+    - { class: "iconfont icon-qq-fill", link: "http://wpa.qq.com/msgrd?v=3&uin=1063995931&site=qq&menu=yes", tip: "QQ" }
+    - { class: "iconfont icon-wechat-fill", qrcode: "https://static.kevinchu.top/blog/assets/img/wechat_qrcode.jpg"}
+    - { class: "iconfont icon-mail", link: "http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=Snt6fHlzc39zeXsKOztkKSUn", tip: "邮箱" }
     # - { class: "iconfont icon-douban-fill", link: "https://douban.com", tip: "豆瓣" }
     # - { class: "iconfont icon-wechat-fill", qrcode: "/img/favicon.png" }
 
-albums:
-  banner_img: https://static.kevinchu.top/blog/assets/img/bg_019.jpg
-  banner_img_height: 60
-  banner_mask_alpha: 0.3
 
 #---------------------------
 # 自定义页
