修改菜单栏，添加发现栏目

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -355,6 +355,14 @@ navbar:
     - { key: "links", link: "/links/", icon: "iconfont icon-link-fill", name: "链接"}
     - { key: "gallery", link: "/gallery/", icon: "iconfont icon-images", name: "图库" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
+    - {
+      key: '发现',
+      icon: 'iconfont icon-bug',
+      submenu: [
+        { key: '工具箱', link: 'https://tool.lu/' },
+        { key: '今日热榜', link: 'https://tophub.today/' }
+      ]
+  }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
