--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -436,8 +436,10 @@ footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
   content: '
+    Powered by&nbsp;<a href="https://cloud.tencent.com/" target="_blank" rel="nofollow noopener"><span>腾讯云</span></a>
+    <span>|</span>
     <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>Hexo</span></a>
-    <i class="iconfont icon-love"></i>
+    <span>|</span>
     <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener"><span>Fluid</span></a>
   '
 
