--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
       env:
         SECRET_ID: ${{ secrets.TCLOUD_API_ID }}
         SECRET_KEY: ${{ secrets.TCLOUD_API_KEY }}
-        BUCKET: blog-kevinchu-top-1302704512 #改为自己的存储桶名称
-        REGION: ap-nanjing #改为自己的地域
+        BUCKET: ${{ secrets.TCLOUD_COS_BUCKET_NAME }}
+        REGION: ${{ secrets.TCLOUD_COS_REGION }}
       run: |
         coscmd config -a $SECRET_ID -s $SECRET_KEY -b $BUCKET -r $REGION
         tccli configure set secretId $SECRET_ID
