修改博客配置信息

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: KEVIN'S BLOG
 subtitle: ''
-description: ''
+description: 'KEVIN'S BLOG'
 keywords:
 author: Kevin Chu
 language: zh-CN
