--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: KEVIN'S BLOG
 subtitle: ''
-description: 'KEVIN'S BLOG'
+description: ''
 keywords:
 author: Kevin Chu
 language: zh-CN
