--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -955,9 +955,9 @@ about:
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/KevinChu1998", tip: "GitHub" }
-    - { class: "iconfont icon-qq-fill", link: "http://wpa.qq.com/msgrd?v=3&uin=1063995931&site=qq&menu=yes", tip: "QQ" }
+    - { class: "iconfont icon-qq-fill", link: "https://wpa.qq.com/msgrd?v=3&uin=1063995931&site=qq&menu=yes", tip: "QQ" }
     - { class: "iconfont icon-wechat-fill", qrcode: "https://static.kevinchu.top/blog/assets/img/wechat_qrcode.jpg"}
-    - { class: "iconfont icon-mail", link: "http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=Snt6fHlzc39zeXsKOztkKSUn", tip: "邮箱" }
+    - { class: "iconfont icon-mail", link: "https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=Snt6fHlzc39zeXsKOztkKSUn", tip: "邮箱" }
     # - { class: "iconfont icon-douban-fill", link: "https://douban.com", tip: "豆瓣" }
     # - { class: "iconfont icon-wechat-fill", qrcode: "/img/favicon.png" }
 
