--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -744,7 +744,7 @@ post:
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis
-    type: utterances
+    type: waline
 
 
 #---------------------------
@@ -826,21 +826,18 @@ valine:
 # Derived from Valine, with self-hosted service and new features
 # See: https://waline.js.org/
 waline:
-  serverURL: ''
+  serverURL: 'https://waline.kevinchu.top'
   path: window.location.pathname
-  placeholder:
   meta: ['nick', 'mail', 'link']
   requiredMeta: ['nick']
   lang: 'zh-CN'
   emoji: ['https://cdn.jsdelivr.net/gh/walinejs/emojis/weibo']
   dark: 'html[data-user-color-scheme="dark"]'
-  avatar: 'retro'
-  avatarCDN: 'https://seccdn.libravatar.org/avatar/'
-  avatarForce: false
   wordLimit: 0
   pageSize: 10
-  highlight: true
-
+  locale: 
+    placeholder: '哈，快找个位置随便坐~'
+  
 # 畅言 Changyan
 # 基于第三方的服务
 # Based on third-party service, insufficient support for regions outside China
@@ -1051,7 +1048,7 @@ links:
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis
-    type: utterances
+    type: waline
 
 
 #---------------------------
@@ -1101,7 +1098,7 @@ static_prefix:
 
   valine: https://lib.baomitu.com/valine/1.4.16/
 
-  waline: https://lib.baomitu.com/waline/1.5.2/
+  waline: https://cdn.staticfile.org/waline/2.15.5/
 
   gitalk: https://lib.baomitu.com/gitalk/1.7.2/
 
