--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -359,7 +359,8 @@ navbar:
       icon: 'iconfont icon-map',
       submenu: [
         { key: '导航', link: '/navigation/' },
-        { key: '图库', link: '/gallery/' }
+        { key: '图库', link: '/gallery/' },
+        { key: '虫洞', link: 'https://foreverblog.cn/go.html'}
       ]
     }
 
@@ -957,7 +958,7 @@ about:
     - { class: "iconfont icon-github-fill", link: "https://github.com/KevinChu1998", tip: "GitHub" }
     - { class: "iconfont icon-qq-fill", link: "https://wpa.qq.com/msgrd?v=3&uin=1063995931&site=qq&menu=yes", tip: "QQ" }
     - { class: "iconfont icon-wechat-fill", qrcode: "https://static.kevinchu.top/blog/assets/img/wechat_qrcode.jpg"}
-    - { class: "iconfont icon-mail", link: "https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=Snt6fHlzc39zeXsKOztkKSUn", tip: "邮箱" }
+    - { class: "iconfont icon-mail", link: "mailto:1063995931@qq.com", tip: "邮箱" }
     # - { class: "iconfont icon-douban-fill", link: "https://douban.com", tip: "豆瓣" }
     # - { class: "iconfont icon-wechat-fill", qrcode: "/img/favicon.png" }
 
