--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -234,6 +234,8 @@ font:
 custom_js:
   # 小星星特效
   - https://static.kevinchu.top/blog/assets/js/stars.js
+  # 打字礼花特效
+  - https://static.kevinchu.top/blog/assets/js/typing-effect.js
 
 # 指定自定义 .css 文件路径，用法和 custom_js 相同
 # The usage is the same as custom_js
